# Farbenie-grafov

./: README.md
Python/: BK_clique.py  BKheures_clique.py  README.txt  ZOZNAM_GRAFOV.txt  bip.txt  contractionColor.py  density.py  flat1000_76_0.txt  geneticColor.py  graphtools.py  greedyColor.py  greedyDSaturColor.py  klikatest.txt  krizovatka.txt  le450_25b.txt  le450_5c.txt  m-Color.py  matrix.py  peterson.txt  pyproject.toml  queen15_15.txt  random.txt  recursiveMIS.py  sabina.txt  sudoku.txt  tree.txt
