[tool.poetry]
name = "graphcolorandclique"
version = "1.0.0"
description = "packages for graph coloring and clique algorithms"
authors = ["Alzbeta Valachova"]
readme = "README.txt"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.3"
matplotlib = "^3.7.1"
random2 = "^1.0.1"
randomcolor = "^0.4.4.6"
networkx = "^3.1"
math0 = "^1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
